# spellchecker

./: CMakeLists.txt  README.md  build.sh
files/: test.txt  test2.txt
include/: Application.h  SpellChecker.h
src/: Application.cpp  EndOfFileException.cpp  EndOfFileException.h  FileReader.cpp  FileReader.h  SpellChecker.cpp  SpellChecker.h  TextCleaner.cpp  TextCleaner.h  client_io.cpp  client_io.h  main.cpp
